# Mod-AI

./: CMakeLists.txt  README.md
demo/: BuildOntology.cpp  CMakeLists.txt  Demo01.cpp  Demo02.cpp  Demo03.cpp  Demo04.cpp  Demo05.cpp  Demo06.cpp  Demo07.cpp  Demo08.cpp  Demo09.cpp  Demo10.cpp  Demo11.cpp  Demo12.cpp  Demo13.cpp  Demo14.cpp  Demo15.cpp  Demo16.cpp  Demo17.cpp  Demo18.cpp  Demo19.cpp  Demo20.cpp  Demo21.cpp  Demo22.cpp  Demo23.cpp  Demo24.cpp  Main.cpp  Main.hpp  Ontology.cpp
source/: AI.cpp  AI.hpp  Common.hpp  Mind.cpp  Mind.hpp  Society.cpp  Society.hpp
source/inner/: Crumb.cpp  Crumb.hpp  Idea.cpp  Idea.hpp  Ontology.cpp  Ontology.hpp  Pattern.cpp  Pattern.hpp
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestIdea.cpp  TestMind.cpp  TestPatterns.cpp
